--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,12 @@ spring:
     password: tngus6832
   sql:
     init: # DB 초기화
-      schema-locations: classpath:db/schema.sql
+      #schema-locations: classpath:db/schema.sql
       data-locations: classpath:db/data.sql
       mode: always
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect # MYSQL에 맞는 SQL 문법을 처리하기 위해
     hibernate:
-      ddl-auto: update # 서버를 실행할 때마다 DB UPDATE
+      ddl-auto: create-drop # 시작과 종료에서 모두 drop한다.
     show-sql: true # API 호출시, SQL 문을 콘솔에 출력한다.
     defer-datasource-initialization: true #Spring2.5 버전 이상부터 data.sql을 사용하고 싶으면 명시
