--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
       ddl-auto: create-drop # 시작과 종료에서 모두 drop한다.
     show-sql: true # API 호출시, SQL 문을 콘솔에 출력한다.
     defer-datasource-initialization: true #Spring2.5 버전 이상부터 data.sql을 사용하고 싶으면 명시
+  servlet:
+    multipart:
+      max-file-size: 10MB # 파일의 최대 사이즈
+      max-request-size: 20MB # 요청한 최대 사이즈
