--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,5 @@ spring:
       enabled: true
   freemarker:
     cache: false # 컴파일을 다시하지 않아도 됌
+  profiles:
+    include: oauth # 소셜 로그인 설정 properties
