--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.5.3' // 타임리프 레이아웃
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // 소셜 로그인 기능
+	implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '5.5.1' // 로그인 여부에 따라 노출
+	implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.0.4.RELEASE'
 }
 
 test {
