--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,7 @@ spring:
     cache: false # 컴파일을 다시하지 않아도 됌
   profiles:
     include: oauth # 소셜 로그인 설정 properties
+  session:
+    store-type: jdbc # 세션 저장소를 jdbc로 선택
+    jdbc:
+      initialize-schema: always
